# test2

./: .gitignore  README.md  chat.py  excel_to_sqlite.py  pyproject.toml  text.xlsx
.devcontainer/: devcontainer.json
